--- a/styles/sites.css
+++ b/styles/sites.css
@@ -11,6 +11,13 @@ h1 {
   margin: 0;
   padding: 1rem;
 }
+h2{
+  color: #fff;
+  margin-left: 2rem;
+}
+ul{
+  margin-left: 2rem;;
+}
 .video {
   margin: 0;
   padding: 1rem;
