--- a/styles/sites.css
+++ b/styles/sites.css
@@ -1,18 +1,17 @@
-body {
-  background: #3b2b44;
-}
+
 /* #home {
   background-image: url("../images/BAA15DF1-C734-4785-92A9-66A2DB64B2D7_1_105_c.jpeg");
   height: 100%;
 } */
 h1 {
   color: #fff;
+  background-color: #3b2b44;
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 1rem;
 }
 h2{
-  color: #fff;
+  color: #3b2b44;
   margin-left: 2rem;
 }
 ul{
@@ -23,9 +22,21 @@ ul{
   padding: 1rem;
 }
 li {
-  color: #fff;
+  color: #3b2b44;
 }
 li a {
-  color: #fff;
-  font-size: 1.5rem;
+  color: #3b2b44;
+  font-size: 1.2rem;
+}
+ul li a:link,
+ul li a:visited,
+li a:hover {
+  color: #3b2b44;
+  text-decoration: none;
+  padding: 0.5em 0;
+}
+ul li a:hover,
+ul li a:active,
+ul li a.current {
+  color: lightgray;
 }
