--- a/assignments/assignment_01/styles.css
+++ b/assignments/assignment_01/styles.css
@@ -3,7 +3,8 @@
   height: 100%;
 } */
 body {
-  /* background-color: #3b2b44; */
+  /* background-color: #3b2b44; */  
+  background-color: lightgray; 
 }
 h1 {
   color: #fff;
