--- a/assignments/assignment_01/styles.css
+++ b/assignments/assignment_01/styles.css
@@ -3,12 +3,33 @@
   height: 100%;
 } */
 body {
-  /* background-color: #3b2b44; */  
-  background-color: lightgray; 
-}
-h1 {
-  color: #fff;
+  background-color: #dee0df; 
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
-  padding: 1rem;
+}
+h1,h2,h3 {
+  color: #3b2b44;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 1rem;
+  padding: 0;
+}
+h4 {
+  color: #3b2b44;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 0 0 0 1rem;
+  padding: 0;
+}
+
+.fit-picture{
+  margin: 1rem;
+  padding: 0;
+}
+p, section{
+  margin: 1rem;
+  padding: 0;
+  width: 1000px;
+}
+
+.p5Canvas{
+  margin: 0 0 0 1rem;
+  padding: 0;
 }
