--- a/assignments/assignment_01/styles.css
+++ b/assignments/assignment_01/styles.css
@@ -15,7 +15,7 @@ h1,h2,h3 {
 h4 {
   color: #3b2b44;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 0 1rem;
+  margin: 0 0 0.5rem 1.5rem;
   padding: 0;
 }
 
@@ -24,12 +24,16 @@ h4 {
   padding: 0;
 }
 p, section{
-  margin: 1rem;
+  margin: 1.5rem;
   padding: 0;
   width: 1000px;
+  font-size: 1.5rem;;
+}
+li{
+  margin: 1rem;
 }
 
 .p5Canvas{
-  margin: 0 0 0 1rem;
+  margin: 0 0 0 1.5rem;
   padding: 0;
 }
