--- a/styles/sites.css
+++ b/styles/sites.css
@@ -1,4 +1,3 @@
-
 /* #home {
   background-image: url("../images/BAA15DF1-C734-4785-92A9-66A2DB64B2D7_1_105_c.jpeg");
   height: 100%;
@@ -10,12 +9,12 @@ h1 {
   margin: 0;
   padding: 1rem;
 }
-h2{
+h2 {
   color: #3b2b44;
   margin-left: 2rem;
 }
-ul{
-  margin-left: 2rem;;
+ul {
+  margin-left: 2rem;
 }
 .video {
   margin: 0;
@@ -23,6 +22,7 @@ ul{
 }
 li {
   color: #3b2b44;
+  line-height: 1.5;
 }
 li a {
   color: #3b2b44;
