--- a/assignments/assignment_02/styles.css
+++ b/assignments/assignment_02/styles.css
@@ -12,6 +12,9 @@ h1,h2,h3 {
   margin: 1rem;
   padding: 0;
 }
+h2{
+  font-size: 1.5rem;
+}
 h4 {
   color: #3b2b44;
   font-family: Arial, Helvetica, sans-serif;
@@ -24,7 +27,7 @@ h4 {
   padding: 0;
 }
 p, section{
-  margin: 1.5rem;
+  margin: 1rem;
   padding: 0;
   width: 1000px;
   font-size: 1.5rem;;
