--- a/assignments/assignment_03/styles.css
+++ b/assignments/assignment_03/styles.css
@@ -3,63 +3,26 @@
   height: 100%;
 } */
 body {
-  background-color: #dee0df; 
+  /* background-color: #dee0df;  */
   font-family: Arial, Helvetica, sans-serif;
 }
-h1,h2,h3 {
-  color: #3b2b44;
+h1 {
+  color: #fff;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 1rem;
+  margin: 0;
   padding: 0;
+  font-size: 5rem;
 }
-h2{
-  font-size: 1.5rem;
-}
-h4 {
-  color: #3b2b44;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 0.5rem 1.5rem;
+
+p,
+section {
+  margin: 0;
   padding: 0;
 }
 
-.fit-picture{
-  margin: 1rem;
-  padding: 0;
-}
-p, section{
-  margin: 1rem;
-  padding: 0;
-  width: 1000px;
-  font-size: 1.5rem;;
-}
-li{
-  margin: 1rem;
-}
-code{
-  color: #113dc1;
-}
-figcaption{
-  font-style: italic;
-}
-.p5Canvas{
-  margin: 0 0 0 1.5rem;
-  padding: 0;
-}
-.noSelect{
+.noSelect {
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
- } 
- a:link,
- a:visited,
- a:hover {
-  color: #3b2b44;
-  text-decoration: none;
-  padding: 0.5em 0;
-}
-a:hover,
-a:active,
-a.current {
-  color: #fff;
 }
