--- a/assignments/assignment_03/styles.css
+++ b/assignments/assignment_03/styles.css
@@ -19,6 +19,12 @@ section {
   margin: 0.5rem;
   padding: 0.5rem;
 }
+#input{
+  display: inline-block;
+  background-color: #fff;
+  padding-right: 10rem;
+  padding-bottom: 5rem;
+}
 
 .noSelect {
   -moz-user-select: none;
