--- a/assignments/assignment_04/styles.css
+++ b/assignments/assignment_04/styles.css
@@ -1,11 +1,29 @@
-
 body {
-  background-color: #eeeeee;   
   font-family: Arial, Helvetica, sans-serif;
 }
-h1,p {
-  color: #3b2b44;
+h1 {
+  color: #fff;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 1rem;
+  margin: 0;
   padding: 0;
+  font-size: 5rem;
+}
+
+p,
+section {
+  margin: 0.5rem;
+  padding: 0.5rem;
+}
+#input{
+  display: inline-block;
+  background-color: #fff;
+  padding-right: 10rem;
+  padding-bottom: 5rem;
+}
+
+.noSelect {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
