--- a/assignments/assignment_04/styles.css
+++ b/assignments/assignment_04/styles.css
@@ -6,22 +6,30 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  font-size: 5rem;
 }
-
-p,
 section {
-  margin: 0.5rem;
-  padding: 0.5rem;
+  margin: 0;
+  padding: 0;
+}
+p{
+  padding: 0;
+  margin:0;
 }
 #input{
   display: block;
-  /* display: inline-block; */
   background-color: #fff;
   padding-right: 10rem;
-  padding-bottom: 5rem;
-}
+  padding-bottom: 3rem;
 
+}
+#output{
+  color: #fff;
+  font-size: 5rem;
+  font-weight: bold;
+  padding:0;
+  margin:0;
+  text-align: center;
+}
 .noSelect {
   -moz-user-select: none;
   -webkit-user-select: none;
