--- a/assignments/assignment_04/styles.css
+++ b/assignments/assignment_04/styles.css
@@ -62,6 +62,11 @@ button:hover{
   background-color: #7ca5b8;
   transition: 0.7s'
 }
+#sketch-holder {
+  width: 1024px;
+  height: 768px;
+  border: 1px solid #ccc;
+}
 .noSelect {
   -moz-user-select: none;
   -webkit-user-select: none;
